# mimuw-kierki

./: .gitignore  README.md  client-game-state.cpp  client-game-state.h  common.cpp  common.h  kierki-klient.cpp  kierki-serwer.cpp  network-common.cpp  network-common.h  server-game-state.cpp  server-game-state.h
test/: CMakeLists.txt  client_game_state_test.cpp  common_test.cpp  main_test.cpp  network_common_test.cpp
